--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 sudo: false
 language: php
+cache:
+  directories:
+    - $HOME/.composer/cache
 php:
   - 7.0
   - 5.6
@@ -8,6 +11,6 @@ php:
   - 5.3
 install:
   - composer self-update
-  - composer install
+  - composer install --prefer-dist
 script:
   - make test
