--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 sudo: false
-dist: precise
+dist: trusty
 language: php
 cache:
   directories:
     - $HOME/.composer/cache
 php:
+  - 7.2
+  - 7.1
   - 7.0
   - 5.6
-  - 5.5
-  - 5.4
-  - 5.3
 install:
   - composer self-update
   - composer install --prefer-dist
