--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
         }
     },
     "require": {
-        "php": ">=5.3.4",
+        "php": ">=5.6",
         "katzgrau/klogger": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*"
+        "phpunit/phpunit": "^5.0"
     }
 }
