Drop support for PHP 7.0 and less
  - Add CI support for for PHP 7.3 - 8.0
  - Include PHPUnit 8.x and 9.x as dependencies
  - Add Shaarli's TestCase polyfill class for assertContains and
assertNotContains

Closes #47

--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
         }
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.1",
         "katzgrau/klogger": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0"
     }
 }
