--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ cache:
   directories:
     - $HOME/.composer/cache
 php:
+  - nightly
+  - 7.4
+  - 7.3
   - 7.2
   - 7.1
-  - 7.0
-  - 5.6
 install:
   - composer self-update
   - composer install --prefer-dist
