--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -7,6 +7,7 @@
 
     <rule ref="PSR12" />
     <rule ref="Generic.PHP.RequireStrictTypes.MissingDeclaration" />
+    <rule ref="Generic.Arrays.DisallowLongArraySyntax" />
 
     <file>NetscapeBookmarkParser.php</file>
     <file>tests</file>
