[feature] Parsing 'ICON' attribute.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 composer.lock
 vendor
-logs/
 !.gitkeep
+
+/logs/
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
