--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,23 @@
             "email": "virtualtam@flibidi.net",
             "homepage": "https://github.com/virtualtam",
             "role": "Developer"
+        },
+        {
+            "name": "Matthias Morin",
+            "email": "mat@tangoman.io",
+            "homepage": "https://github.com/TangoMan75",
+            "role": "Developer"
         }
     ],
-    "keywords": ["bookmark", "link", "netscape", "parse"],
-    "autoload": {"files": ["NetscapeBookmarkParser.php"]},
+    "keywords": ["bookmark", "link", "netscape", "parse", "encoder", "decoder"],
+    "autoload": {
+        "psr-4": {
+            "Shaarli\\NetscapeBookmarkParser\\": "src/"
+        }
+    },
     "autoload-dev": {
         "psr-4": {
-            "Shaarli\\NetscapeBookmarkParser\\": "tests/"
+            "Shaarli\\NetscapeBookmarkParser\\Tests\\": "tests/"
         }
     },
     "require": {
